# rust-https-server-client

./: README.md
http-client/: Cargo.toml
http-client/src/: main.rs
http-server/: Cargo.toml  cert.pem  key.pem
http-server/src/: main.rs
